--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "path": "^0.12.7"
+    "firebase": "^5.5.2",
+    "path": "^0.12.7",
+    "tools": "0.0.0"
   }
 }
